--- a/ProyectoDiseño/nbproject/project.properties
+++ b/ProyectoDiseño/nbproject/project.properties
@@ -31,13 +31,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.48.jar=D:\\diego\\espol\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48.jar
+file.reference.mysql-connector-java-5.1.48.jar-1=mysql-connector-java-5.1.48.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-5.1.48.jar}
+    ${file.reference.mysql-connector-java-5.1.48.jar}:\
+    ${file.reference.mysql-connector-java-5.1.48.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
