--- a/ProyectoDiseño/nbproject/project.properties
+++ b/ProyectoDiseño/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/ProyectoDise\u00f1o.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.junit-4.13-beta-3.jar=junit-4.13-beta-3.jar
 file.reference.mysql-connector-java-5.1.48.jar-1=mysql-connector-java-5.1.48.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -37,7 +38,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-5.1.48.jar-1}
+    ${file.reference.mysql-connector-java-5.1.48.jar-1}:\
+    ${file.reference.junit-4.13-beta-3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
