--- a/ProyectoDiseño/nbproject/project.properties
+++ b/ProyectoDiseño/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/ProyectoDise\u00f1o.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3.jar=hamcrest-core-1.3.jar
 file.reference.junit-4.13-beta-3.jar=junit-4.13-beta-3.jar
 file.reference.mysql-connector-java-5.1.48.jar-1=mysql-connector-java-5.1.48.jar
 includes=**
@@ -39,7 +40,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.mysql-connector-java-5.1.48.jar-1}:\
-    ${file.reference.junit-4.13-beta-3.jar}
+    ${file.reference.junit-4.13-beta-3.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
